pkg/front_end/testcases/patterns/issue51739.dart.weak.modular.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/patterns/issue51739.dart:7:19: Error: Variable pattern 'x' doesn't have the same type or finality in all cases.
//   if (q case (var x! || String x)) {
//                   ^
//
import self as self;
import "dart:core" as core;

static method method() → dynamic {
  core::int? q = (2 as dynamic) as{TypeError,ForDynamic} core::int?;
  {
    hoisted invalid-type x;
    final synthesized core::int? #0#0 = q;
    if((let final dynamic #t1 = #0#0! in let final dynamic #t2 = x = #0#0! in true) || #0#0 is core::String && (let final dynamic #t3 = x = #0#0 in true)) {
      core::print(x);
      core::print(<dynamic>[x].{core::Object::runtimeType}{core::Type});
    }
  }
}
